--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - id: foo
-        uses: actions/actions@v1
+        uses: actions/hello-world-composite-action@v1
         with:
-          who-to-greet: 'Mona the Octocat'
+          who-to-greet: 'Hello Alex'
       - run: echo random-number ${{ steps.foo.outputs.random-number }}
         shell: bash
