--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,6 @@ jobs:
         uses: alexdemichieli/hello-world-composite-action@v4
         with:
           who-to-greet: 'Hello Alex'
-      - run: echo here's a joke ${{ steps.foo.outputs.random-joke }} #steps foo should 'output' random-joke. Random-joke is 
+      - run: echo here's a joke ${{ steps.foo.outputs.random-joke }} #steps foo should 'output' random-joke. Random-joke is the id of the output in the action.yml file
+      - run: echo this is the variable $DAY_OF_WEEK
         shell: bash
