--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,8 @@ jobs:
     steps:
       # - uses: actions/checkout@v3
       - id: foo
-        uses: alexdemichieli/hello-world-composite-action@v4
+        uses: ./.github/actions/hello-world-composite-action
+       # uses: alexdemichieli/hello-world-composite-action@v4
         with:
           who-to-greet: 'Hello Alex'
       - run: echo here's a joke ${{ steps.foo.outputs.random-joke }} #steps foo should 'output' random-joke. Random-joke is the id of the output in the action.yml file
