--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,7 @@ jobs:
     steps:
       # - uses: actions/checkout@v3
       - id: foo
+        uses: actions/checkout@v1
         uses: ./.github/actions/hello-world-composite-action
        # uses: alexdemichieli/hello-world-composite-action@v4
         with:
