--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     name: A job to say hello
     steps:
-      # - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
       - id: foo
-        - uses: actions/checkout@v1
-        - uses: ./.github/actions/hello-world-composite-action
+        uses: ./.github/actions/hello-world-composite-action
        # uses: alexdemichieli/hello-world-composite-action@v4
         with:
           who-to-greet: 'Hello Alex'
