--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,10 +27,9 @@ jobs:
     env:
       Greeting: Hello
     steps:
-      id: foo
-      uses: ./.github/actions/hello-world-composite-action 
- 
-      - run: echo here's a joke ${{ steps.foo.outputs.random-joke }} 
-      - run: echo "$Greeting $First_Name. Today is $DAY_OF_WEEK!"
-        env:
-          First_Name: Mona
+      - uses: ./.github/actions/hello-world-composite-action 
+      - id: foo 
+        - run: echo here's a joke ${{ steps.foo.outputs.random-joke }} 
+        - run: echo "$Greeting $First_Name. Today is $DAY_OF_WEEK!"
+          env:
+            First_Name: Mona
