--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,21 +16,12 @@ jobs:
         with:
           who-to-greet: 'Hello Alex'
       - run: echo here's a joke ${{ steps.foo.outputs.random-joke }} #steps foo should 'output' random-joke. Random-joke is the id of the output in the action.yml file
-      - run: echo "this is the variable ${{env.DAY_OF_WEEK }}" #to access global vars you need to access the global context with env.
+      - run: echo "this is the variable ${{env.DAY_OF_WEEK }}" #to access global vars you need to access the global context with
       - run: echo "${VERTEX_CONTAINER}"
       - run: echo 'Hi ${{ env.DAY_OF_WEEK }}' 
         env:
           DAY_OF_WEEK: Tuesday
-      - id: 'test-vars'
-        env: 
-          container: 'gcr.io/deeplearning-platform-release/base-cu110:latest'
-          - run: echo ${container}' 
         shell: bash
-      # - name: 'test-vars'
-      #   env: 
-      #     container: 'gcr.io/deeplearning-platform-release/base-cu110:latest'
-      #   - run: echo ${container}' 
-
 
 # name: Greeting on variable day
 
