--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,9 +15,9 @@ jobs:
        # uses: alexdemichieli/hello-world-composite-action@v4 # would use action in another repo
         with:
           who-to-greet: 'Hello Alex'
-      - run: echo here's a joke ${{ steps.foo.outputs.random-joke }} #steps foo should 'output' random-joke. Random-joke is the id of the output in the action.yml file
-      - run: echo "this is the variable ${{env.DAY_OF_WEEK }}" #to access global vars you need to access the global context with .env and ${{}}
-      - run: echo " this is the variable in output ${VERTEX_JOB_URI}"
+      # - run: echo here's a joke ${{ steps.foo.outputs.random-joke }} #steps foo should 'output' random-joke. Random-joke is the id of the output in the action.yml file
+      - run: echo "use of global variable in checkmark output ${{env.DAY_OF_WEEK }}" #to access global vars you need to access the global context with .env and ${{}}
+      - run: echo " this is the variable in log ${VERTEX_JOB_URI}"
         shell: bash
 
       - name: "Another env test without curlies"
