--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
         shell: bash
 
       - name: "Another env test without curlies"
-        run: echo "Today is $DAY_OF_WEEK!"
+        run: echo "Hello $First_Name!"
         env:
           First_Name: Mona
 
