--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,7 @@ on: [push]
 
 env:
   DAY_OF_WEEK: Monday
+  First_Name: "Alex"
   VERTEX_JOB_URI: 'https://console.cloud.google.com/vertex-ai/locations'
 
 jobs:
@@ -21,7 +22,7 @@ jobs:
         shell: bash
 
       - name: "Another env test without curlies"
-        run: echo "Hello $First_Name!"
+        run: echo "Hello ${{env.First_Name}}! or $First_Name"
         env:
           First_Name: Mona
 
