--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       - run: echo " this is the variable in log ${VERTEX_JOB_URI}"
         shell: bash
 
-      - name: "Another env test without curlies"
+      - name: "Another env test without curlies ${{env.First_Name}}! or $First_Name"
         run: echo "Hello ${{env.First_Name}}! or $First_Name"
         env:
           First_Name: Mona
