--- a/.github/workflows/main.copy.yml
+++ b/.github/workflows/main.copy.yml
@@ -12,11 +12,14 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - id: foo
-        uses: ./.github/actions/hello-world-composite-action
+        uses: ./.github/actions/hello-world-composite-action # uses action in same repo
+       # uses: alexdemichieli/hello-world-composite-action@v4 # would use action in another repo
         with:
           who-to-greet: 'Hello Alex'
-      - run: echo "use of global variable in checkmark output ${{env.DAY_OF_WEEK }}" #to access global vars in checkmarks layout you need to access the global context with .env and ${{}}
+      # - run: echo here's a joke ${{ steps.foo.outputs.random-joke }} #steps foo should 'output' random-joke. Random-joke is the id of the output in the action.yml file
+      - run: echo "use of global variable in checkmark output ${{env.DAY_OF_WEEK }}" #to access global vars you need to access the global context with .env and ${{}}
       - run: echo " this is the variable in log ${VERTEX_JOB_URI}"
+        shell: bash
 
       - name: "Another env test without curlies ${{env.First_Name}}! or $First_Name"
         run: echo "$First_Name"
