--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,10 @@ jobs:
       - run: echo "use of global variable in checkmark output ${{env.DAY_OF_WEEK }}" #to access global vars in checkmarks layout you need to access the global context with .env and ${{}}
       - run: echo " this is the variable in log ${VERTEX_JOB_URI}"
         run: |
-          echo "${VERTEX_CONTAINER}" > text.txt
+          for i in {1..5}
+          do
+          echo ${VERTEX_JOB_URI}"
+          done
 
       - name: "Another env test without curlies ${{env.First_Name}}! or $First_Name"
         run: echo "$First_Name"
