--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,29 +20,10 @@ jobs:
       - run: |
           for i in {1..5}
           do
-          echo ${VERTEX_JOB_URI}"
+          echo "${VERTEX_JOB_URI}"
           done
 
       - name: "Another env test without curlies ${{env.First_Name}}! or $First_Name"
         run: echo "$First_Name"
         env:
           First_Name: Mona
-
-# name: Greeting on variable day
-
-# on:
-#   workflow_dispatch
-
-# env:
-#   DAY_OF_WEEK: Monday
-
-# jobs:
-#   greeting_job:
-#     runs-on: ubuntu-latest
-#     env:
-#       Greeting: Hello
-#     steps:
-#       - name: "Say Hello Mona it's Monday"
-#         run: echo "$Greeting $First_Name. Today is $DAY_OF_WEEK!"
-#         env:
-#           First_Name: Mona
