--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ env:
 jobs:
   hello_world_job:
   runs:
-  using: 'composite'
+  uses: actions/checkout@v3
   steps:
     - name: 'checkout'
       uses: 'actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b'
