--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,44 @@
 on: [push]
 
+# env:
+#   DAY_OF_WEEK: Monday
+#   First_Name: "Alex"
+#   VERTEX_JOB_URI: 'https://console.cloud.google.com/vertex-ai/locations'
+#   VERTEX_CONTAINER: 'gcr.io/deeplearning-platform-release/base-cu110:latest'
+
+
+name: 'Vertex AI Notebook Review Action'
+description: 'Execute notebooks and create links to their output files'
+inputs:
+  gcs_source_bucket:
+    description: 'Google Cloud Storage bucket to store notebooks to be run by Vertex AI. e.g. <project-id>/nbr/source'
+    required: true
+  gcs_output_bucket:
+    description: 'Google Cloud Storage bucket to store the results of the notebooks executed by Vertex AI. e.g. <project-id>/nbr/output'
+    required: true
+  allowlist:
+    description: 'Comma separated list of files to run on Vertex AI. e.g. mynotebook.ipynb, somedir/**.pynb. It is expected that this is the output from an action like ```dorny/paths-filter```'
+    required: true
+  vertex_machine_type:
+    description: 'Type of Vertex AI machine to run notebooks on e.g. n1-standard-4'
+    default: 'n1-standard-4'
+  region:
+    description: 'Google Cloud region e.g. us-central1, us-east4'
+    default: 'us-central1'
+
+permissions:
+  pull-requests: 'write'
+  issues: 'write'
+  contents: write
+  id-token: 'write'
+
 env:
-  DAY_OF_WEEK: Monday
-  First_Name: "Alex"
-  VERTEX_JOB_URI: 'https://console.cloud.google.com/vertex-ai/locations'
   VERTEX_CONTAINER: 'gcr.io/deeplearning-platform-release/base-cu110:latest'
+  VERTEX_JOB_URI: 'https://console.cloud.google.com/vertex-ai/locations'
+  VERTEX_NOTEBOOK_URI: 'https://notebooks.cloud.google.com/view'
 
-
-jobs:
-  hello_world_job:
   runs:
-  uses: actions/checkout@v3
+  using: 'composite'
   steps:
     - name: 'checkout'
       uses: 'actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b'
