--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ on: [push]
 env:
   DAY_OF_WEEK: Monday
   First_Name: "Alex"
-  VERTEX_JOB_URI: 'https://console.cloud.google.com/vertex-ai/locations'
+  VERTEX_CONTAINER: 'https://console.cloud.google.com/vertex-ai/locations'
 
 jobs:
   hello_world_job:
@@ -15,12 +15,12 @@ jobs:
         uses: ./.github/actions/hello-world-composite-action
         with:
           who-to-greet: 'Hello Alex'
-      - run: echo "use of global variable in checkmark output ${{env.DAY_OF_WEEK }}" #to access global vars in checkmarks layout you need to access the global context with .env and ${{}}
-      - run: echo " this is the variable in log ${VERTEX_JOB_URI}"
+      - run: echo "use of global variable in checkmark output ${{env.DAY_OF_WEEK }}" 
+      - run: echo " this is the variable in log ${VERTEX_CONTAINER}"
       - run: |
           for i in {1..5}
           do
-          echo "${VERTEX_JOB_URI}"
+          echo "${VERTEX_CONTAINER}"
           done
 
       - name: "Another env test without curlies ${{env.First_Name}}! or $First_Name"
