--- a/.github/actions/hello-world-composite-action/action.yml
+++ b/.github/actions/hello-world-composite-action/action.yml
@@ -9,6 +9,10 @@ outputs:
   random-joke: # id of the output
     description: "Random joke"
     value: ${{ steps.random-joke-generator.outputs.joke }} #gets the value from line 18. Syntax: steps.<id>.outputs.<name>
+env:
+  VERTEX_CONTAINER: 'gcr.io/deeplearning-platform-release/base-cu110:latest'
+  VERTEX_JOB_URI: 'https://console.cloud.google.com/vertex-ai/locations'
+  VERTEX_NOTEBOOK_URI: 'https://notebooks.cloud.google.com/view'
 runs:
   using: "composite"
   steps:
@@ -20,4 +24,9 @@ runs:
     - run: echo "${{ github.action_path }}" >> $GITHUB_PATH
       shell: bash          
     - run: goodbye.sh
+    - run: |
+          for i in {1..5}
+          do
+          echo "${VERTEX_CONTAINER}"
+          done
       shell: bash
