--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,11 +17,11 @@ jobs:
           who-to-greet: 'Hello Alex'
       - run: echo "use of global variable in checkmark output ${{env.DAY_OF_WEEK }}" 
       - run: echo " this is the variable in log ${VERTEX_CONTAINER}"
-      - run: |
-          for i in {1..5}
-          do
-          echo "${VERTEX_CONTAINER}"
-          done
+      # - run: |
+      #     for i in {1..5}
+      #     do
+      #     echo "${VERTEX_CONTAINER}"
+      #     done
 
       - name: "Another env test without curlies ${{env.First_Name}}! or $First_Name"
         run: echo "$First_Name"
