--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - id: foo
         uses: ./.github/actions/hello-world-composite-action
         with:
-          who-to-greet: 'Hello Alex'
+          who-to-greet: "Who to greet ${VERTEX_CONTAINER}"
       - run: echo "use of global variable in checkmark output ${{env.DAY_OF_WEEK }}" 
       - run: echo " this is the variable in log ${VERTEX_CONTAINER}"
       # - run: |
