--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,21 +8,15 @@ env:
 jobs:
   hello_world_job:
     runs-on: ubuntu-latest
-    name: A job to say hello
+    name: A job to test variables
     steps:
       - uses: actions/checkout@v3
       - id: foo
         uses: ./.github/actions/hello-world-composite-action
         with:
-          who-to-greet: "Who to greet ${VERTEX_CONTAINER}"
+          who-to-greet: "Read this variable ===> ${VERTEX_CONTAINER}"
       - run: echo "use of global variable in checkmark output ${{env.DAY_OF_WEEK }}" 
       - run: echo " this is the variable in log ${VERTEX_CONTAINER}"
-      # - run: |
-      #     for i in {1..5}
-      #     do
-      #     echo "${VERTEX_CONTAINER}"
-      #     done
-
       - name: "Another env test without curlies ${{env.First_Name}}! or $First_Name"
         run: echo "$First_Name"
         env:
