--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - id: foo
         uses: ./.github/actions/hello-world-composite-action
         with:
-          who-to-greet: "Read this variable ===> ${VERTEX_CONTAINER}"
+          who-to-greet: "Read this variable ===> '${VERTEX_CONTAINER}' "
       - run: echo "use of global variable in checkmark output ${{env.DAY_OF_WEEK }}" 
       - run: echo " this is the variable in log ${VERTEX_CONTAINER}"
       - name: "Another env test without curlies ${{env.First_Name}}! or $First_Name"
