--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,13 +8,13 @@ env:
 jobs:
   hello_world_job:
     runs-on: ubuntu-latest
-    name: A job to test variables
+    name: A job to say hello
     steps:
       - uses: actions/checkout@v3
       - id: foo
         uses: ./.github/actions/hello-world-composite-action
         with:
-          who-to-greet: "Read this variable ===> '${VERTEX_CONTAINER}' "
+          who-to-greet: "Who to greet ${VERTEX_CONTAINER}"
       - run: echo "use of global variable in checkmark output ${{env.DAY_OF_WEEK }}" 
       - run: echo " this is the variable in log ${VERTEX_CONTAINER}"
       - name: "Another env test without curlies ${{env.First_Name}}! or $First_Name"
