--- a/.github/actions/hello-world-composite-action/action.yml
+++ b/.github/actions/hello-world-composite-action/action.yml
@@ -19,7 +19,8 @@ runs:
     - run: echo Hello ${{ inputs.who-to-greet }}.
       shell: bash
     - id: random-joke-generator
-      run: echo "::set-output name=g-env::$(echo "${VERTEX_CONTAINER}")"
+      # run: echo "::set-output name=g-env::$(echo "${VERTEX_CONTAINER}")"
+      run: echo "::set-output name=random-number::$(echo $RANDOM)"
       shell: bash
     - run: echo "${{ github.action_path }}" >> $GITHUB_PATH
       shell: bash          
