--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,5 @@
 on: [push]
 
-env:
-  DAY_OF_WEEK: Monday
-  First_Name: "Alex"
-  VERTEX_CONTAINER: 'https://console.cloud.google.com/vertex-ai/locations'
-
 jobs:
   hello_world_job:
     runs-on: ubuntu-latest
@@ -14,11 +9,6 @@ jobs:
       - id: foo
         uses: ./.github/actions/hello-world-composite-action
         with:
-          who-to-greet: "Who to greet ${VERTEX_CONTAINER}"
-      - run: echo "use of global variable in checkmark output ${{env.DAY_OF_WEEK }}" 
-      - run: echo " this is the variable in log ${VERTEX_CONTAINER}"
-      - name: "Another env test without curlies ${{env.First_Name}}! or $First_Name"
-        run: echo "$First_Name"
-        env:
-          First_Name: Mona
-
+          who-to-greet: 'Mona the Octocat'
+      - run: echo random-number ${{ steps.foo.outputs.random-number }}
+        shell: bash
