--- a/.github/actions/hello-world-composite-action/action.yml
+++ b/.github/actions/hello-world-composite-action/action.yml
@@ -9,13 +9,17 @@ outputs:
   random-number:
     description: "Random number"
     value: ${{ steps.random-number-generator.outputs.random-number }}
+env:
+  VERTEX_CONTAINER: 'gcr.io/deeplearning-platform-release/base-cu110:latest'
+  VERTEX_JOB_URI: 'https://console.cloud.google.com/vertex-ai/locations'
+  VERTEX_NOTEBOOK_URI: 'https://notebooks.cloud.google.com/view'
 runs:
   using: "composite"
   steps:
     - run: echo Hello ${{ inputs.who-to-greet }}.
       shell: bash
     - id: random-number-generator
-      run: echo "::set-output name=random-number::$(echo $RANDOM)"
+      run: echo "::set-output name=random-number::$(echo ${VERTEX_NOTEBOOK_URI})"
       shell: bash
     - run: echo "${{ github.action_path }}" >> $GITHUB_PATH
       shell: bash          
