--- a/.github/actions/hello-world-composite-action/action.yml
+++ b/.github/actions/hello-world-composite-action/action.yml
@@ -19,7 +19,7 @@ runs:
     - run: echo Hello ${{ inputs.who-to-greet }}.
       shell: bash
     - id: random-number-generator
-      run: echo "::set-output name=random-number::$(echo '${VERTEX_NOTEBOOK_URI}')"
+      run: echo "::set-output name=random-number::$(echo ${env.VERTEX_NOTEBOOK_URI})"
       shell: bash
     - run: echo "${{ github.action_path }}" >> $GITHUB_PATH
       shell: bash          
