--- a/.github/actions/hello-world-composite-action/action.yml
+++ b/.github/actions/hello-world-composite-action/action.yml
@@ -15,11 +15,15 @@ env:
   VERTEX_NOTEBOOK_URI: 'https://notebooks.cloud.google.com/view'
 runs:
   using: "composite"
+  - name: 'test envs'
+    env:
+      greeting: '${{ hello world }}'
+     
   steps:
     - run: echo Hello ${{ inputs.who-to-greet }}.
       shell: bash
     - id: random-number-generator
-      run: echo "::set-output name=random-number::$(echo $VERTEX_CONTAINER)"
+      run: echo "::set-output name=random-number::$(echo ${greeting})"
       shell: bash
     - run: echo "${{ github.action_path }}" >> $GITHUB_PATH
       shell: bash          
