--- a/.github/actions/hello-world-composite-action/action.yml
+++ b/.github/actions/hello-world-composite-action/action.yml
@@ -16,14 +16,11 @@ env:
 runs:
   using: "composite"
   - name: 'test envs'
-    env:
-      greeting: ${{ 'hello world' }}
-     
   steps:
     - run: echo Hello ${{ inputs.who-to-greet }}.
       shell: bash
     - id: random-number-generator
-      run: echo "::set-output name=random-number::$(echo $greeting)"
+      run: echo "::set-output name=random-number::$(echo $VERTEX_CONTAINER)"
       shell: bash
     - run: echo "${{ github.action_path }}" >> $GITHUB_PATH
       shell: bash          
