--- a/.github/actions/hello-world-composite-action/action.yml
+++ b/.github/actions/hello-world-composite-action/action.yml
@@ -26,7 +26,7 @@ runs:
     - id: 'vertex-execution'
       env:
         greeting: hello there
-      run: echo "::set-output name=testing-var::$(echo $RANDOM)" # null output
+      run: echo "::set-output name=variable-output::$(echo $RANDOM)" # null output
       shell: bash
     - run: echo "${{ github.action_path }}" >> $GITHUB_PATH
       shell: bash          
