--- a/.github/actions/hello-world-composite-action/action.yml
+++ b/.github/actions/hello-world-composite-action/action.yml
@@ -28,7 +28,7 @@ runs:
       shell: bash
     - id: vertex-execution
       env:
-        notebooks: 'hello there'
+        notebooks: hello there
       run: echo "::set-output name=g-var::$(echo $RANDOM)" #outputs random variable
     - run: echo "${{ github.action_path }}" >> $GITHUB_PATH
       shell: bash          
