--- a/.github/actions/hello-world-composite-action/action.yml
+++ b/.github/actions/hello-world-composite-action/action.yml
@@ -9,9 +9,9 @@ outputs:
   random-number:
     description: "Random number"
     value: ${{ steps.random-number-generator.outputs.random-number }}
-  test-var:
-    description: "Testing a variable"
-    value: ${{ steps.vertex-execution.outputs.g-var }}
+  # test-var:
+  #   description: "Testing a variable"
+  #   value: ${{ steps.vertex-execution.outputs.g-var }}
 env:
   VERTEX_CONTAINER: 'gcr.io/deeplearning-platform-release/base-cu110:latest'
   VERTEX_JOB_URI: 'https://console.cloud.google.com/vertex-ai/locations'
@@ -26,10 +26,10 @@ runs:
       #run: echo "::set-output name=random-number::$(echo $VERTEX_CONTAINER)" # null output
       #run: echo "::set-output name=random-number::$(echo ${{env.VERTEX_CONTAINER}})" # null output
       shell: bash
-    - id: vertex-execution
-      env:
-        notebooks: ${{ 'It''s open source!' }}
-      run: echo "::set-output name=g-var::$(echo $RANDOM)" #outputs random variable
+    # - id: vertex-execution
+    #   env:
+    #     notebooks: ${{ 'It''s open source!' }}
+    #   run: echo "::set-output name=g-var::$(echo $RANDOM)" #outputs random variable
     - run: echo "${{ github.action_path }}" >> $GITHUB_PATH
       shell: bash          
     - run: goodbye.sh
