--- a/.github/actions/hello-world-composite-action/action.yml
+++ b/.github/actions/hello-world-composite-action/action.yml
@@ -30,6 +30,7 @@ runs:
       env:
         notebooks: ${{ 'It''s open source!' }}
       run: echo "::set-output name=g-var::$(echo $RANDOM)" #outputs random variable
+      shell: bash
     - run: echo "${{ github.action_path }}" >> $GITHUB_PATH
       shell: bash          
     - run: goodbye.sh
