--- a/.github/actions/hello-world-composite-action/action.yml
+++ b/.github/actions/hello-world-composite-action/action.yml
@@ -11,7 +11,7 @@ outputs:
     value: ${{ steps.random-number-generator.outputs.random-number }}
   test-var:
     description: "Testing a variable"
-    value: ${{ steps.vertex-execution.outputs.g-var }}
+    value: ${{ steps.vertex-execution.outputs.test-var}}
 env:
   VERTEX_CONTAINER: 'gcr.io/deeplearning-platform-release/base-cu110:latest'
   VERTEX_JOB_URI: 'https://console.cloud.google.com/vertex-ai/locations'
@@ -29,7 +29,7 @@ runs:
     - id: vertex-execution
       env:
         notebooks: ${{ 'It''s open source!' }}
-      run: echo "::set-output name=g-var::$(echo $RANDOM)" #outputs random variable
+      run: echo "::set-output name=test-var::$(echo $RANDOM)" #outputs random variable
       shell: bash
     - run: echo "${{ github.action_path }}" >> $GITHUB_PATH
       shell: bash          
