--- a/.github/actions/hello-world-composite-action/action.yml
+++ b/.github/actions/hello-world-composite-action/action.yml
@@ -22,8 +22,8 @@ runs:
     - id: random-number-generator
       env:
         withinScope: ${{ 'i am a in scope variable' }}
-      run: echo "::set-output name=random-number::$(echo ${GLOVAR})" # null output
-      #run: echo "::set-output name=random-number::$(echo ${withinScope})" # outputs withinScope var successfully
+      #run: echo "::set-output name=random-number::$(echo ${GLOVAR})" # null output
+      run: echo "::set-output name=random-number::$(echo ${withinScope})" # outputs withinScope var successfully
       shell: bash
     - id: vertex-execution
       env:
