--- a/.github/actions/hello-world-composite-action/action.yml
+++ b/.github/actions/hello-world-composite-action/action.yml
@@ -14,6 +14,7 @@ outputs:
     value: ${{ steps.vertex-execution.outputs.test-var}}
 env:
   GLOVAR: ${{ 'I am a global variable' }}
+  DAY_OF_WEEK: Monday
 runs:
   using: "composite"
   steps:
@@ -23,6 +24,7 @@ runs:
       env:
         withinScope: ${{ 'i am a in scope variable' }}
       run: echo "::set-output name=random-number::$(echo ${{env.GLOVAR}})" # null output
+      run: echo "Today is $DAY_OF_WEEK!"
       #run: echo "::set-output name=random-number::$(echo ${withinScope})" # outputs withinScope var successfully
       shell: bash
     - id: vertex-execution
