--- a/.github/actions/hello-world-composite-action/action.yml
+++ b/.github/actions/hello-world-composite-action/action.yml
@@ -23,7 +23,7 @@ runs:
     - id: random-number-generator
       env:
         withinScope: ${{ 'i am a in scope variable' }}
-      run: echo "::set-output name=random-number::$(echo ${{env.GLOVAR}})" # null output
+      #run: echo "::set-output name=random-number::$(echo ${{env.GLOVAR}})" # null output
       run: echo "Today is $DAY_OF_WEEK!"
       #run: echo "::set-output name=random-number::$(echo ${withinScope})" # outputs withinScope var successfully
       shell: bash
