--- a/.github/actions/hello-world-composite-action/action.yml
+++ b/.github/actions/hello-world-composite-action/action.yml
@@ -14,7 +14,7 @@ outputs:
     value: ${{ steps.vertex-execution.outputs.test-var}}
 env:
   GLOVAR: ${{ 'I am a global variable' }}
-  Monday: Monday
+  Monday: 'Monday'
 runs:
   using: "composite"
   steps:
